      addons like TabMixPlus
    * IMPORTANT: We do not beep on unrecognized mappings anymore, to make it easier to just
      use Firefox mappings if the user wants them
    * IMPORTANT: Removed :redraw and Ctrl-l as it just doesn't make sense to have that feature
    * IMPORTANT: 'jsdebugger' option was removed, as JS completion should work much better
      out of the box now.
    * IMPORTANT: Add 'g@' mapping for switching to an app tab.
    * IMPORTANT: Add '<C-S-n>' and '<C-S-p>' mappings for switching to the next / previous group.
    * Support for sub commands.
      And subCommands argument is added 4th commands.parseArgs's arguments.
    * Added guioptions=A to allow toggling of the addon-bar. Thanks garbas
    * Fixed :open sometimes selecting the wrong entry when autocompletions were turned on
      and the user quickly pressed Tab.
    * Many small fixes for Firefox4 changes
    * Lots of restyled content and changed colors
    * gu works now better for urls with anchors and GET arguments (like url.com/file?query=foo#anchor)
    * :bmarks and :history commands support multiple space separated filter entries and
      match them on both URL and title. Multi filter highlighting for results in
      the URL and title fields.
    * remove "URL (additional)" entries from the search results. Only list urls which
      match either the url or description
    * :bmarks -k[eyword] to search bookmarks by a keyword
    * Some colors have changed their default values (like InfoMsg and ModeMsg)
    * Pressing Escape now clears any previous command output. Scrolling the web page, however, does NOT
      not clear it anymore (as it used to do)
    * History, bookmarks and :open output limit the width of the URL column to 50% so you can
      always see (and interact with hints) the title column as well
    * Better escape certain characters when yanking links to improve pasting in other applications
    * :dialog passwords