@@ -43,83 +43,95 @@
 
 <div insertafter=":tabd">
 
-<h2 tag="tabgroup">Tab group management</h2>
+<h2 tag="tabgroups">Tab group management</h2>
 
 <item>
-    <tags>:panorama :tabgroup</tags>
+    <tags>:tabgroups :panorama</tags>
+    <spec>:tabgroups <oa>sub-command</oa></spec>
     <spec>:panorama <oa>sub-command</oa></spec>
-    <spec>:tabgroup <oa>sub-command</oa></spec>
     <description>
         <p>
-            Manage tab group.
-            Show simple help if not specified <oa>sub-command</oa>.
+            Manage tab groups (also called Panorama in Firefox).
+            If the <oa>sub-command</oa> is not specified, it lists all current tab groups.
         </p>
 
-        <h3 tag="tabgroup-subcommands">Sub commands</h3>
+        <h3 tag="tabgroups-subcommands">Sub commands</h3>
 
         <item>
-            <tags>panorama-mkgroup panoamra-mk</tags>
-            <spec>mk<oa>group</oa><oa>!</oa> <oa>groupName</oa></spec>
+            <tags>tabgroups-add</tags>
+            <spec>add<oa>group</oa><oa>!</oa> <oa>groupName</oa></spec>
             <description>
                 <p>
-                    Create a tab group named <oa>groupName</oa> if specified,
-                    and switch to the group.
+                    Create a tab group and switches to the group.
+                    If <oa>groupName</oa> is specified, also sets the name of the group.
                 </p>
                 <p>
-                    The selected tab is moved to the group if specified <oa>!</oa>.
+                    The selected tab is moved to the group if used with <oa>!</oa>.
                 </p>
             </description>
         </item>
 
         <item>
-            <tags>panorama-swichgroup panorama-sg</tags>
-            <spec><oa>count</oa>switchgroup <a>groupName</a></spec>
-            <spec><oa>count</oa>sg <a>groupName</a></spec>
+            <tags>tabgroups-list</tags>
+            <spec>list</spec>
+            <description>
+                <p>
+                    List current tab groups.
+                </p>
+            </description>
+        </item>
+
+        <item>
+            <tags>tabgroups-pulltab tabgroups-pull</tags>
+            <spec>pulltab<oa>tab</oa><oa>!</oa> <a>url|index</a></spec>
+            <description>
+                <p>
+                    Pull the tab from another group.
+                    The argument <a>url|index</a> is the same as <ex>:buffer</ex>'s argument.
+                </p>
+                <p>
+                    Also switch to the tab if <oa>!</oa> is specified.
+                </p>
+            </description>
+        </item>
+
+        <item>
+            <tags>tabgroups-pushtab tabgroups-push tabgroups-stash</tags>
+            <spec>pushtab<oa>!</oa> <a>groupName</a></spec>
+            <spec>stash<oa>!</oa> <a>groupName</a></spec>
+            <description>
+                <p>
+                    Move the current tab to a group named <a>groupName</a>.
+                </p>
+                <p>
+                    If the group does not exist, you can use <oa>!</oa> 
+                    to automatically create a new group named <a>groupName</a> and
+                    move the tab there.
+                </p>
+            </description>
+        </item>
+
+        <item>
+            <tags>tabgroups-remove tabgroups-rm</tags>
+            <spec>remove<oa>group</oa> <oa>groupName</oa></spec>
+            <spec>rm<oa>group</oa> <oa>groupName</oa></spec>
+            <description>
+                <p>
+                    Close all tabs in the group named <oa>groupName</oa>.
+                    When <oa>groupName</oa> is omitted, close the current group.
+                </p>
+            </description>
+        </item>
+
+        <item>
+            <tags>tabgroups-switch</tags>
+            <spec><oa>count</oa>switch <a>groupName</a></spec>
             <description>
                 <p>
                     Switch to a group named <a>groupName</a>.
                 </p>
                 <p>
                     Switch to <oa>count</oa>th next group if <oa>count</oa> is specified.
-                </p>
-            </description>
-        </item>
-
-        <item>
-            <tags>panorama-stash</tags>
-            <spec>stash<oa>!</oa> <a>groupName</a></spec>
-            <description>
-                <p>
-                    Stash the current tab to a group named <a>groupName</a>.
-                </p>
-                <p>
-                    Create a new group and stash
-                    when <a>groupName</a> doesn't exists and <oa>!</oa> is specified.
-                </p>
-            </description>
-        </item>
-
-        <item>
-            <tags>panorama-rmgroup panorama-rm</tags>
-            <spec>rm<oa>group</oa> <oa>groupName</oa></spec>
-            <description>
-                <p>
-                    Close all tabs in the group.
-                    When <oa>groupName</oa> is ommited, close all the current group.
-                </p>
-            </description>
-        </item>
-
-        <item>
-            <tags>panorama-pulltab panorama-pull</tags>
-            <spec>pull<oa>tab</oa><oa>!</oa> <a>url|index</a></spec>
-            <description>
-                <p>
-                    Pull the tab from another group.
-                    The argument <a>url|index</a> is same as <ex>:buffer</ex>'s argument.
-                </p>
-                <p>
-                    pull and switch to the tab if <oa>!</oa> is specified.
                 </p>
             </description>
         </item>
